tests/snapshots/golden_go__go_config_go_all_four_schemes.snap
---
source: tests/golden_go.rs
expression: contents
---
package core

import (
	"encoding/json"
	"os"
	"path/filepath"
	"strconv"
)

// AuthMethod mirrors the closed set of auth strategies discovered from the
// OpenAPI spec — the same "basic" | "apiKey" | "pat" | "oauth2" | "oauth1"
// wire values `GoTemplateContext::from_context` derives, restricted here to
// only the schemes this project actually discovered.
type AuthMethod string

// AuthMethodNone is the zero-configuration fallback when no auth scheme
// was discovered — Story G4's StubStrategy is registered under it. Always
// declared (unlike the per-scheme consts below) since Config.AuthMethod's
// Go zero value ("") already equals it, so this just gives that zero
// value a name rather than gating it on discovery.
const AuthMethodNone AuthMethod = ""

// Each discovered method gets its own ungrouped `const` statement rather
// than one shared `const (...)` block — gofmt column-aligns every entry in
// a grouped block by the longest identifier, which a Tera template can't
// predict ahead of rendering since the set of discovered schemes (and
// therefore the longest identifier) varies per generation; ungrouped
// single-line const statements aren't subject to that alignment, so the
// output stays gofmt-clean regardless of which schemes were discovered.
const AuthMethodBasic AuthMethod = "basic"
const AuthMethodPat AuthMethod = "pat"
const AuthMethodOAuth2 AuthMethod = "oauth2"
const AuthMethodOAuth1 AuthMethod = "oauth1"

// Transport selects which Harness Server transport (Story G5) is active.
type Transport string

const (
	TransportStdio Transport = "stdio"
	TransportHTTP  Transport = "http"
)

// Config is the typed view of the resolved REQ-2.2 cascade.
type Config struct {
	URL           string
	AuthMethod    AuthMethod
	ApiVersion    string
	LogLevel      string
	RateLimit     int
	TimeoutMs     int
	CacheSize     int
	RetryAttempts int
	Transport     Transport
	Host          string
	Port          int
	CorsAllow     string
}

// defaultAPIVersion is which version `Load` falls back to when nothing
// overrides it — the project's default/latest version at the time this
// was last rendered (`generate` or `mcpify add-version --set-default`).
// mcpify:versions:begin
func defaultAPIVersion() string { return "default" }

// mcpify:versions:end

// Defaults is tier 7: built-in defaults, the lowest-priority tier every
// other tier overrides. Exported (not just used internally by Load) so the
// `config` command (Story G5's cascade-by-source diagnostic view) can
// display this tier without duplicating the literal values here.
func Defaults() Config {
	return Config{
		ApiVersion:    defaultAPIVersion(),
		LogLevel:      "info",
		RateLimit:     100,
		TimeoutMs:     30_000,
		CacheSize:     500,
		RetryAttempts: 3,
		Transport:     TransportStdio,
		Host:          "127.0.0.1",
		Port:          3000,
	}
}

// CLIOverrides carries tier-1 values a cobra command parsed directly
// (Story G5) — a pointer field is set only when its flag was actually
// passed, so an unset flag doesn't clobber a lower tier's value.
type CLIOverrides struct {
	URL       *string
	Host      *string
	Port      *int
	CorsAllow *string
}

// InstallDirConfigPath is tier-6's path: config.json next to the running
// executable. Exported so both Load and the `config` command's
// cascade-by-source display resolve this tier's path through the exact
// same formula — see this file's package doc comment on Load.
func InstallDirConfigPath() (string, error) {
	installDir, err := os.Executable()
	if err != nil {
		return "", err
	}
	return filepath.Join(filepath.Dir(installDir), "config.json"), nil
}

// SystemConfigPath is tier-5's path: /etc/out/config.json.
func SystemConfigPath() string {
	return "/" + filepath.Join("etc", "out", "config.json")
}

// HomeConfigPath is tier-4's path: ~/.out/config.json.
func HomeConfigPath() (string, error) {
	home, err := os.UserHomeDir()
	if err != nil {
		return "", err
	}
	return filepath.Join(home, ".out", "config.json"), nil
}

// LocalConfigPath is tier-3's path: out.config.json in the
// current working directory.
func LocalConfigPath() (string, error) {
	cwd, err := os.Getwd()
	if err != nil {
		return "", err
	}
	return filepath.Join(cwd, "out.config.json"), nil
}

// Load resolves REQ-2.2's 7-tier configuration cascade (CLI flags > env
// vars > local file > home file > system file > install-dir file >
// built-in defaults), applied lowest-priority-first so each later tier
// overwrites the fields it sets. Mirrors
// `targets::csharp::templates::Core::Config.cs.tera`'s cascade, adapted to
// a hand-rolled struct merge since Go has no `IConfiguration`-equivalent
// first-party layered-config primitive (v5-implementation-plan.md's
// toolchain note on `config`). Each file tier's path comes from this
// file's exported *ConfigPath helper — the single source of truth the
// `config` command's diagnostic display reuses rather than recomputing.
func Load(overrides CLIOverrides) (Config, error) {
	cfg := Defaults()

	if installDirPath, err := InstallDirConfigPath(); err == nil {
		applyFile(&cfg, installDirPath)
	}
	applyFile(&cfg, SystemConfigPath())
	if homePath, err := HomeConfigPath(); err == nil {
		applyFile(&cfg, homePath)
	}
	if localPath, err := LocalConfigPath(); err == nil {
		applyFile(&cfg, localPath)
	}
	applyEnv(&cfg)
	applyCLIOverrides(&cfg, overrides)

	if cfg.URL == "" {
		return cfg, NewConfigurationError("url is required (set OUT_URL or pass --url)")
	}
	return cfg, nil
}

type fileOverrides struct {
	URL           *string `json:"url"`
	AuthMethod    *string `json:"authMethod"`
	ApiVersion    *string `json:"apiVersion"`
	LogLevel      *string `json:"logLevel"`
	RateLimit     *int    `json:"rateLimit"`
	TimeoutMs     *int    `json:"timeoutMs"`
	CacheSize     *int    `json:"cacheSize"`
	RetryAttempts *int    `json:"retryAttempts"`
	Transport     *string `json:"transport"`
	Host          *string `json:"host"`
	Port          *int    `json:"port"`
	CorsAllow     *string `json:"corsAllow"`
}

func applyFile(cfg *Config, path string) {
	data, err := os.ReadFile(path)
	if err != nil {
		return
	}
	var overrides fileOverrides
	if err := json.Unmarshal(data, &overrides); err != nil {
		return
	}
	overrides.applyTo(cfg)
}

func (o fileOverrides) applyTo(cfg *Config) {
	if o.URL != nil {
		cfg.URL = *o.URL
	}
	if o.AuthMethod != nil {
		cfg.AuthMethod = AuthMethod(*o.AuthMethod)
	}
	if o.ApiVersion != nil {
		cfg.ApiVersion = *o.ApiVersion
	}
	if o.LogLevel != nil {
		cfg.LogLevel = *o.LogLevel
	}
	if o.RateLimit != nil {
		cfg.RateLimit = *o.RateLimit
	}
	if o.TimeoutMs != nil {
		cfg.TimeoutMs = *o.TimeoutMs
	}
	if o.CacheSize != nil {
		cfg.CacheSize = *o.CacheSize
	}
	if o.RetryAttempts != nil {
		cfg.RetryAttempts = *o.RetryAttempts
	}
	if o.Transport != nil {
		cfg.Transport = Transport(*o.Transport)
	}
	if o.Host != nil {
		cfg.Host = *o.Host
	}
	if o.Port != nil {
		cfg.Port = *o.Port
	}
	if o.CorsAllow != nil {
		cfg.CorsAllow = *o.CorsAllow
	}
}

func applyEnv(cfg *Config) {
	if v, ok := os.LookupEnv("OUT_URL"); ok {
		cfg.URL = v
	}
	if v, ok := os.LookupEnv("OUT_AUTH_METHOD"); ok {
		cfg.AuthMethod = AuthMethod(v)
	}
	if v, ok := os.LookupEnv("OUT_API_VERSION"); ok {
		cfg.ApiVersion = v
	}
	if v, ok := os.LookupEnv("OUT_LOG_LEVEL"); ok {
		cfg.LogLevel = v
	}
	if v, ok := os.LookupEnv("OUT_TRANSPORT"); ok {
		cfg.Transport = Transport(v)
	}
	if v, ok := os.LookupEnv("OUT_HOST"); ok {
		cfg.Host = v
	}
	if v, ok := os.LookupEnv("OUT_CORS_ALLOW"); ok {
		cfg.CorsAllow = v
	}
	if v, ok := os.LookupEnv("OUT_RATE_LIMIT"); ok {
		if n, err := strconv.Atoi(v); err == nil {
			cfg.RateLimit = n
		}
	}
	if v, ok := os.LookupEnv("OUT_TIMEOUT_MS"); ok {
		if n, err := strconv.Atoi(v); err == nil {
			cfg.TimeoutMs = n
		}
	}
	if v, ok := os.LookupEnv("OUT_CACHE_SIZE"); ok {
		if n, err := strconv.Atoi(v); err == nil {
			cfg.CacheSize = n
		}
	}
	if v, ok := os.LookupEnv("OUT_RETRY_ATTEMPTS"); ok {
		if n, err := strconv.Atoi(v); err == nil {
			cfg.RetryAttempts = n
		}
	}
	if v, ok := os.LookupEnv("OUT_PORT"); ok {
		if n, err := strconv.Atoi(v); err == nil {
			cfg.Port = n
		}
	}
}

func applyCLIOverrides(cfg *Config, o CLIOverrides) {
	if o.URL != nil {
		cfg.URL = *o.URL
	}
	if o.Host != nil {
		cfg.Host = *o.Host
	}
	if o.Port != nil {
		cfg.Port = *o.Port
	}
	if o.CorsAllow != nil {
		cfg.CorsAllow = *o.CorsAllow
	}
}
