tests/snapshots/golden_go__go_file_tree_single_oauth2_scheme.snap
---
source: tests/golden_go.rs
expression: file_tree(&output_dir)
---
[
    ".env.example",
    ".githooks/pre-commit",
    ".github/workflows/ci.yml",
    ".github/workflows/docker-build.yml",
    ".github/workflows/release.yml",
    ".gitignore",
    ".golangci.yml",
    ".mcpify/settings.yaml",
    "Dockerfile",
    "LICENSE",
    "README.md",
    "cmd/out/main.go",
    "cmd/populate-embeddings/main.go",
    "docker-compose.yml",
    "go.mod",
    "internal/auth/errors.go",
    "internal/auth/manager.go",
    "internal/auth/oauth2.go",
    "internal/auth/oauth2_test.go",
    "internal/auth/register.go",
    "internal/auth/requestcredentials.go",
    "internal/auth/strategy.go",
    "internal/auth/stub.go",
    "internal/cli/roles.go",
    "internal/cli/setup.go",
    "internal/cli/versions.go",
    "internal/core/cache.go",
    "internal/core/cache_test.go",
    "internal/core/circuitbreaker.go",
    "internal/core/config.go",
    "internal/core/credentialstorage.go",
    "internal/core/errors.go",
    "internal/core/healthcheck.go",
    "internal/core/healthcheck_test.go",
    "internal/core/logger.go",
    "internal/core/mcpserver.go",
    "internal/core/ratelimiter.go",
    "internal/core/tracing.go",
    "internal/data/store.go",
    "internal/http/localhost.go",
    "internal/http/middleware.go",
    "internal/http/server.go",
    "internal/services/apiclient.go",
    "internal/services/embedding.go",
    "internal/services/embedding_cache_dir_test.go",
    "internal/services/embedding_integration_test.go",
    "internal/services/embeddings_populated_test.go",
    "internal/services/populate.go",
    "internal/services/vectorstore.go",
    "internal/tools/call.go",
    "internal/tools/get.go",
    "internal/tools/register.go",
    "internal/tools/search.go",
    "internal/validation/generated_schemas.json.zst",
    "internal/validation/validator.go",
    "mcp_store.db",
    "scripts/coverage.sh",
    "scripts/profile.sh",
]
